[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/ui/menu/buttons/button_collectables.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_leaderboard.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/menu/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/menu/backgrounds/main_background.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_play.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_settings.png" type="Texture" id=6]
[ext_resource path="res://scenes/ui/components/ScoreLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/ui/menu/buttons/button_score.png" type="Texture" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 795.0
margin_bottom = 445.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 265.0
margin_bottom = 440.0
size_flags_horizontal = 3
alignment = 1

[node name="PlayButton" type="TextureButton" parent="MarginContainer/HBoxContainer/ButtonsContainer"]
margin_top = 180.0
margin_right = 265.0
margin_bottom = 218.0
texture_normal = ExtResource( 5 )

[node name="CollectionButton" type="TextureButton" parent="MarginContainer/HBoxContainer/ButtonsContainer"]
margin_top = 222.0
margin_right = 265.0
margin_bottom = 260.0
texture_normal = ExtResource( 1 )

[node name="LeaderboardButton" type="TextureButton" parent="MarginContainer/HBoxContainer/ButtonsContainer"]
visible = false
margin_top = 222.0
margin_right = 265.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/HBoxContainer/ButtonsContainer"]
visible = false
margin_top = 243.0
margin_right = 265.0
margin_bottom = 281.0
texture_normal = ExtResource( 6 )

[node name="TitleImageContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 269.0
margin_right = 790.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/TitleImageContainer"]
margin_right = 521.0
margin_bottom = 38.0
texture = ExtResource( 8 )

[node name="MaxScore" parent="MarginContainer/HBoxContainer/TitleImageContainer/TextureRect" instance=ExtResource( 7 )]
margin_left = 169.679
margin_top = 4.19499
margin_right = 209.679
margin_bottom = 37.195
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonsContainer/CollectionButton" to="." method="_on_CollectionButton_pressed"]
